<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".storeEdit">

    <TextView
        android:id="@+id/txStoreName"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:text="@string/text"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edStoreName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="@string/msgStoreName"
        android:ems="12"
        android:inputType="textPersonName"
        android:text="@string/msgStoreName"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/txStoreName"
        app:layout_constraintTop_toBottomOf="@+id/txStoreName" />

    <Button
        android:id="@+id/btnEnd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/textEnd"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnBack"
        app:layout_constraintEnd_toStartOf="@+id/btnBack"

        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/textBack"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toEndOf="@+id/btnEnd"
        app:layout_constraintTop_toBottomOf="@+id/edStoreName" />

</androidx.constraintlayout.widget.ConstraintLayout>